XMLtoCSV/objects/unpackaged/objects/Position_vod__c.object
<CustomObject>
    <description>Institutions where Stakeholders have worked and in which capacity</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Designates when Stakeholder ended at position</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Institution_Type_vod__c</fullName>
        <description>Type of Institution (Foundation, Laboratory, Scientific Association)</description>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory_Board_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial_Board_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guideline_Committee_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health_Authority_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare_Network_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTA_Agency_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry_Association_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet_Portal_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministry_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient_Association_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing_Committee_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private_Practice_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional_Association_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory_Authority_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research_Group_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research_Institute_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientific_Association_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_vod__c</fullName>
        <description>Name of Institution</description>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title_vod__c</fullName>
        <description>Job Title of stakeholder at Institution example: Clinical Researcher</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Position_vod__c</fullName>
        <description>Designates whether this is a current or past position.</description>
        <label>Past Position</label>
        <picklist>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position_Type_vod__c</fullName>
        <description>Name of position stakeholder held, example: Board Member, Head of, Student of Medicine</description>
        <label>Position Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Position_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether this is the Stakeholder&apos;s primary position. Checked = Primary</description>
        <label>Primary Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Designates when Stakeholder started at position</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Position</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Poitions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>KOL_Position_vod</fullName>
        <active>true</active>
        <description>Used for KOL Positions</description>
        <label>KOL_Position_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>